--- a/Vistaaa/Platforms/Android/AndroidManifest.xml
+++ b/Vistaaa/Platforms/Android/AndroidManifest.xml
@@ -1,6 +1,12 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android">
-	<application android:allowBackup="true" android:icon="@mipmap/vistaaa_icon" android:roundIcon="@mipmap/vistaaa_icon_round" android:supportsRtl="true"></application>
+	<application android:allowBackup="true" android:icon="@mipmap/vistaaa_icon" android:roundIcon="@mipmap/vistaaa_icon_round" android:supportsRtl="true">
+		<meta-data android:name="com.google.android.geo.API_KEY" android:value="PASTE-YOUR-API-KEY-HERE" />
+		<meta-data android:name="com.google.android.gms.version" android:value="@integer/google_play_services_version" />
+	</application>
 	<uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 	<uses-permission android:name="android.permission.INTERNET" />
+	<uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+	<uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+	<uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 </manifest>
