--- a/Vistaaa/Vistaaa.csproj
+++ b/Vistaaa/Vistaaa.csproj
@@ -70,8 +70,12 @@
 	  <None Remove="Resources\Fonts\Free-Regular-400.otf" />
 	  <None Remove="Resources\Fonts\Free-Solid-900.otf" />
 	  <None Remove="Resources\Fonts\SignikaNegative-Medium.ttf" />
+	  <None Remove="Resources\Images\briefcase.svg" />
 	  <None Remove="Resources\Images\employer.jpg" />
 	  <None Remove="Resources\Images\finding_job.jpg" />
+	  <None Remove="Resources\Images\home.svg" />
+	  <None Remove="Resources\Images\profile.svg" />
+	  <None Remove="Resources\Images\user.svg" />
 	  <None Remove="Resources\Images\vistaaa_full_logo.png" />
 	</ItemGroup>
 
